@@ -38,6 +38,13 @@
 +-------------------------------+
 
 
+16-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>
+
+	* src/treebrowser.c
+		Added new option to show mime-type icons (can be configured by the preferences)
+			(Idea from Colomban Wendling`s mail)
+
+
 09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>
 
 	* src/treebrowser.c
